更新flutter widget细节笔记

--- a/Flutter/动画.md
+++ b/Flutter/动画.md
@@ -57,6 +57,10 @@ class _MyAnimState extends State<MyAnim> with SingleTickerProviderStateMixin {
 }
 ```
 
+## 常用组件和类
+* `AnimatedBuilder`
+* `AnimatedOpacity`、`AnimatedPadding`、`AnimatedScale`、`AnimatedRotation`、`AnimatedSlide` 等
+
 ## 源码
 首先看一下`AnimationController`的构造函数，它调用传入的`TickerProvider`的`createTicker`方法创建了ticker，ticker就是一个定时回调的工具，它会在SchedulerBinding中注册每一帧刷新的回调：
 ```
